manifests/platform/keycloak/config/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-redirect
  namespace: keycloak
spec:
  parentRefs:
    - name: internal-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "keycloak.${CLUSTER_INTERNAL_DOMAIN}"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: keycloak
spec:
  parentRefs:
    - name: internal-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "keycloak.${CLUSTER_INTERNAL_DOMAIN}"
  rules:
    - backendRefs:
        - name: keycloak
          port: 80
